<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
-->

<resources>
    <string name="app_name">Млади у саобраћају</string>

  <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
  <string name="checkin">Checkin</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_title">Едукација младих у саобраћају</string>
  <string name="menu_mapa">Интерактивна мапа</string>
  <string name="menu_top_mladi">Млади у саобраћају</string>
  <string name="menu_top_prekrsaji">Прекршаји и осигурање</string>
  <string name="menu_top_aktivizam">Активизам</string>
  <string name="menu_top_upitnik1">Упитник - млади</string>
  <string name="menu_top_upitnik2">Упитник - прекршаји и осигурање</string>
  <string name="menu_top_quiz">Квиз</string>
  <string name="button_link">Сазнај више на сајту</string>

</resources>
