<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_interaktivna"
            android:title="@string/menu_mapa" />
        <item
            android:id="@+id/nav_young"
            android:icon="@drawable/ic_ikonaaaa"
            android:title="@string/menu_top_mladi" />
        <item
            android:id="@+id/nav_survey_young"
            android:icon="@drawable/ic_aktivizaam"
            android:title="@string/menu_top_upitnik1" />
        <item
            android:id="@+id/nav_fault"
            android:icon="@drawable/ic_prekrsajiiosiguranje"
            android:title="@string/menu_top_prekrsaji" />
        <item
            android:id="@+id/nav_survey_fault"
            android:icon="@drawable/ic_aktivizaam"
            android:title="@string/menu_top_upitnik2" />
        <item
            android:id="@+id/nav_active"
            android:icon="@drawable/ic_aktivizaam"
            android:title="@string/menu_top_aktivizam" />
    </group>

    <!--<item android:title="Sub items">
        <menu>
            <item
                android:icon="@drawable/ic_dashboard"
                android:title="Sub item 1" />
            <item
                android:icon="@drawable/ic_forum"
                android:title="Sub item 2" />
        </menu>
    </item>-->

</menu>
